flex on the content section

--- a/content/index.html
+++ b/content/index.html
@@ -58,21 +58,21 @@
         </div>
         <div class="information-container">
             <section>
-                <h2>About Bioconductor</h2>
-                <p>
-                Bioconductor uses the R statistical programming language, and is
-                open source and open development. It has two releases each year, and
-                an active user community.<br />
-                Bioconductor is also available as Docker images.
-                </p>
+                <h2 class="format-bold">About Bioconductor</h2>
+                    <p class="text-large">
+                        Bioconductor uses the R statistical programming language, and is
+                        open source and open development. It has two releases each year, and
+                        an active user community.
+                    </p>
+                    <p>Bioconductor is also available as Docker images.</p>
                 <button>more about bioconductor</button>
             </section>
             <section>
                 <h2>Packages</h2>
                 <p>
-                Discover 2230 software packages available in Bioconductor release
-                3.17. <br />
-                <a>Download package Vignettes</a>
+                    Discover 2230 software packages available in Bioconductor release
+                    3.17. <br />
+                    <a>Download package Vignettes</a>
                 </p>
 
                 <button>see all packages</button>
