--- a/content/index.html
+++ b/content/index.html
@@ -58,40 +58,41 @@
         </div>
         <div class="information-container">
             <section>
+                <img src="images/icons/svgs/DNA.svg" alt="DNA"/>
                 <h2 class="format-bold">About Bioconductor</h2>
-                    <p class="text-large">
-                        Bioconductor uses the R statistical programming language, and is
-                        open source and open development. It has two releases each year, and
-                        an active user community.
-                    </p>
-                    <p>Bioconductor is also available as Docker images.</p>
-                <button>more about bioconductor</button>
+                <p class="text-large">
+                    Bioconductor uses the R statistical programming language, and is
+                    open source and open development. It has two releases each year, and
+                    an active user community.
+                </p>
+                <p class="text-large">Bioconductor is also available as Docker images.</p>
+                <a class="button">more about bioconductor</a>
             </section>
             <section>
+                <img src="images/icons/svgs/Packages.svg" alt="Package-polygons"/>
                 <h2>Packages</h2>
-                <p>
+                <p class="text-large">
                     Discover 2230 software packages available in Bioconductor release
-                    3.17. <br />
-                    <a>Download package Vignettes</a>
+                    3.17. 
                 </p>
-
-                <button>see all packages</button>
+                <a class="text-large format-underline">Download package Vignettes</a>
+                <a class="button" >see all packages</a>
             </section>
             <section>
                 <h2>News</h2>
-                <p class="news-item">Bioconductor <a>Bioc 3.17</a> Released</p>
-                <p class="news-item">Bioconductor <a>Community Blog</a></p>
-                <p class="news-item">
+                <p class="news-item text-large">Bioconductor <a>Bioc 3.17</a> Released</p>
+                <p class="news-item text-large">Bioconductor <a>Community Blog</a></p>
+                <p class="news-item text-large">
                 Bioconductor <a>browsable code base</a> now available
                 </p>
-                <p class="news-item">
+                <p class="news-item text-large">
                 See our <a>google calendar</a> for events, conferences, meetings,
                 forums, etc
                 </p>
-                <p class="news-item">
+                <p class="news-item text-large">
                 Bioconductor<a>F1000 Research Channel</a> is available.
                 </p>
-                <button>see all news</button>
+                <a class="button" >see all news</a>
             </section>
         </div>
         <div class="warmcool-box join-content">
