set margins for headings

--- a/content/index.html
+++ b/content/index.html
@@ -57,28 +57,32 @@
         </nav>
         </div>
         <div class="information-container">
-            <section>
-                <img src="images/icons/svgs/DNA.svg" alt="DNA"/>
-                <h2 class="format-bold">About Bioconductor</h2>
-                <p class="text-large">
-                    Bioconductor uses the R statistical programming language, and is
-                    open source and open development. It has two releases each year, and
-                    an active user community.
-                </p>
-                <p class="text-large">Bioconductor is also available as Docker images.</p>
+            <section class="about-bioconductor">
+                <div>
+                    <img src="images/icons/svgs/DNA.svg" alt="DNA"/>
+                    <h2 class="format-bold">About Bioconductor</h2>
+                    <p class="text-large">
+                        Bioconductor uses the R statistical programming language, and is
+                        open source and open development. It has two releases each year, and
+                        an active user community.
+                    </p>
+                    <p class="text-large">Bioconductor is also available as <a>Docker images.</a></p>
+                </div>
                 <a class="button">more about bioconductor</a>
             </section>
-            <section>
-                <img src="images/icons/svgs/Packages.svg" alt="Package-polygons"/>
-                <h2>Packages</h2>
-                <p class="text-large">
-                    Discover 2230 software packages available in Bioconductor release
-                    3.17. 
-                </p>
-                <a class="text-large format-underline">Download package Vignettes</a>
+            <section class="packages" >
+                <div>
+                    <img src="images/icons/svgs/Packages.svg" alt="Package-polygons"/>
+                    <h2>Packages</h2>
+                    <p class="text-large">
+                        Discover 2230 software packages available in Bioconductor release
+                        3.17. 
+                    </p>
+                    <a class="text-large format-underline">Download package Vignettes</a>
+                </div>
                 <a class="button" >see all packages</a>
             </section>
-            <section>
+            <section class="news">
                 <h2>News</h2>
                 <p class="news-item text-large">Bioconductor <a>Bioc 3.17</a> Released</p>
                 <p class="news-item text-large">Bioconductor <a>Community Blog</a></p>
