Added markdown and code highlight library

--- a/content/examples/index.html
+++ b/content/examples/index.html
@@ -25,11 +25,11 @@
   quis. Donec semper tellus nibh, quis hendrerit ante feugiat quis.
 </p>
 
-<div class="feature">
+<blockquote>
   <h2>This is a header that can be used in a ‘feature content’ block</h2>
   <p>This is an example of a full width ‘feature content’ block.</p>
   <p>Update this component with the content you need.</p>
-</div>
+</blockquote>
 
 <a name="heading3"><h3>Heading text 3</h3></a>
 <p>
@@ -51,44 +51,36 @@
 <h4>Code blocks</h4>
 
 <pre>
-<code>
-lorem {ipsum dolor sit} from '@lorem/ipsum'
-
-consectetur db = finibus ipsum({
-replace.this.component.with{yourcode_slot}
-})
+<code class="dark nohighlight">
+if (!require("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+BiocManager::install(version = "3.17")
 </code>
 </pre>
 
 <pre>
-<code class="dark">
-lorem {ipsum dolor sit} from '@lorem/ipsum'
-
-consectetur db = finibus ipsum({
-replace.this.component.with{yourcode_slot}
-})
+<code class="light nohighlight">
+if (!require("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+BiocManager::install(version = "3.17")
 </code>
 </pre>
 
 <h4>Code blocks with colour classes added to text</h4>
 
 <pre>
-<code class="color">
-lorem {ipsum dolor sit} from '@lorem/ipsum'
-
-consectetur db = finibus ipsum({
-replace.this.component.with{yourcode_slot}
-})
+<code class="dark language-r">
+if (!require("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+BiocManager::install(version = "3.17")
 </code>
 </pre>
 
 <pre>
-<code class="dark color">
-lorem {ipsum dolor sit} from '@lorem/ipsum'
-
-consectetur db = finibus ipsum({
-replace.this.component.with{yourcode_slot}
-})
+<code class="light language-r">
+if (!require("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+BiocManager::install(version = "3.17")
 </code>
 </pre>
 
@@ -118,11 +110,11 @@ replace.this.component.with{yourcode_slot}
   consequat justo eros.
 </p>
 
-<div class="feature half-width">
+<blockquote class="half-width">
   <h2>This is a header that can be used in a ‘feature content’ block</h2>
   <p>This is an example of a half width ‘feature content’ block.</p>
   <p>Update this component with the content you need.</p>
-</div>
+</blockquote>
 
 <img
   src="/images/examples/medical.png"
