Fixed links for markdown, and made consistent in HTML

--- a/content/examples/index.html
+++ b/content/examples/index.html
@@ -1,4 +1,4 @@
-<a name="heading1"><h1>Heading text 1</h1></a>
+<h1 id="heading-text-1">Heading text 1</h1>
 
 <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget orci
@@ -16,7 +16,7 @@
   nulla lobortis
 </p>
 
-<a name="heading2"><h2>Heading text 2</h2></a>
+<h2 id="heading-text-2">Heading text 2</h2>
 
 <p>
   Quisque a tellus tempor, convallis sem quis, rutrum nisl. Duis mauris leo,
@@ -31,7 +31,7 @@
   <p>Update this component with the content you need.</p>
 </blockquote>
 
-<a name="heading3"><h3>Heading text 3</h3></a>
+<h3 id="heading-text-3">Heading text 3</h3>
 <p>
   Quisque a tellus tempor, convallis sem quis, rutrum nisl. Duis mauris leo,
   sagittis mattis felis vitae, luctus porttitor leo. Integer lobortis ex sed
@@ -39,7 +39,7 @@
   quis. Donec semper tellus nibh, quis hendrerit ante feugiat quis.
 </p>
 
-<a name="heading4"><h4>Heading text 4</h4></a>
+<h4 id="heading-text-4">Heading text 4</h4>
 
 <p>
   Quisque a tellus tempor, convallis sem quis, rutrum nisl. Duis mauris leo,
@@ -48,7 +48,7 @@
   quis. Donec semper tellus nibh, quis hendrerit ante feugiat quis.
 </p>
 
-<h4>Code blocks</h4>
+<h4 id="code-blocks">Code blocks</h4>
 
 <pre>
 <code class="dark nohighlight">
@@ -84,7 +84,7 @@ BiocManager::install(version = "3.17")
 </code>
 </pre>
 
-<a name="heading5"><h5>Heading Text 5</h5></a>
+<h5 id="heading-text-5">Heading Text 5</h5>
 
 <p>
   Praesent vehicula dui et bibendum fringilla. Curabitur quis fermentum leo.
@@ -102,7 +102,7 @@ BiocManager::install(version = "3.17")
   <li>Bullet item</li>
 </ul>
 
-<a name="heading6"><h6>Heading Text 6</h6></a>
+<h6 id="heading-text-6">Heading Text 6</h6>
 
 <p>
   Praesent vehicula dui et bibendum fringilla. Curabitur quis fermentum leo.
