--- a/content/index.html
+++ b/content/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="homepage-block">
     <span class="buttons">
         <button>For Data scientists</button>
         <button>For developers</button>
@@ -31,31 +31,79 @@
     </div>
 
     <div>
-        <div class="brand-box learn-content">
-        <h2>Learn</h2>
-        <div class="info">
-            <p>
-            Resources to maximize the potential of Bioconductor. <br />
-            From basic functionalities to advanced features, our tutorials,
-            guides, and documentation have you covered.
-            </p>
-            <button>see all Resources</button>
+        <div class="learn-gradient">
+            <div class="learn-block">
+                <h4>Learn</h4>
+                <div class="learn-content">
+                    <div class="info">
+                        <p>
+                        Resources to maximize the potential of Bioconductor. 
+                        </p>
+                        <p>
+                        From basic functionalities to advanced features, our tutorials,
+                        guides, and documentation have you covered.
+                        </p>
+                        <div class="button-padding">
+                        <a class="brand-border-button" href="/install/">
+                            <span class="span-brand format-bold">
+                            See all Resources
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="14"
+                                height="15"
+                                viewBox="0 0 14 15"
+                                fill="none"
+                            >
+                                <path
+                                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                                stroke="#3792AD"
+                                stroke-width="2.2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                />
+                            </svg>
+                             </span>
+                        </a>
+                        </div>
+                    </div>
+                    <nav class="learn-nav">
+                        <a href="/help/course-materials/">Courses<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="/help/education-training/">Education and Training<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="https://support.bioconductor.org">Support site<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="/help/package-vignettes/">Package vignettes<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="/help/publications">Literature citations<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                    </nav>
+                    <nav class="learn-nav">
+                        <a href="/packages/release/BiocViews.html#___Workflow">Common workflows<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="/help/faq">FAQ<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="/help/community/">Community resources<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="https://www.youtube.com/user/bioconductor">Videos<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                        <a href="https://bioconductor.github.io/biocblog/">Bioconductor Community Blog<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+  <path d="M13.5 9.29999L16.5 12.3M16.5 12.3L13.5 15.3M16.5 12.3L8.5 12.3M21.5 12.3C21.5 17.2706 17.4706 21.3 12.5 21.3C7.52944 21.3 3.5 17.2706 3.5 12.3C3.5 7.32942 7.52944 3.29999 12.5 3.29999C17.4706 3.29999 21.5 7.32942 21.5 12.3Z" stroke="#ADD2DD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></a>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <nav class="learn-nav">
-            <a>Courses</a>
-            <a>Education and training</a>
-            <a>support site</a>
-            <a>package vignettes</a>
-            <a>Literature citations</a>
-        </nav>
-        <nav class="learn-nav">
-            <a>Common workflows</a>
-            <a>FAQ</a>
-            <a>Community resources</a>
-            <a>Videos</a>
-            <a>Bioconductor Community Blog</a>
-        </nav>
-        </div>
+
         <div class="info-content">
         <section>
             <h2>About Bioconductor</h2>
