--- a/content/index.html
+++ b/content/index.html
@@ -66,9 +66,27 @@
                         open source and open development. It has two releases each year, and
                         an active user community.
                     </p>
-                    <p class="text-large">Bioconductor is also available as <a>Docker images.</a></p>
+                    <p class="text-large">Bioconductor is also available as <a class="text-large ">Docker images.</a></p>
                 </div>
-                <a class="button">more about bioconductor</a>
+                <div class="button-border">
+                    <a class="button brand-border-button format-bold" href="/about/">More About Bioconductor  
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="14"
+                            height="15"
+                            viewBox="0 0 14 15"
+                            fill="none"
+                        >
+                            <path
+                            d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                            stroke="#3792AD"
+                            stroke-width="2.2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            />
+                        </svg>
+                    </a>
+                </div>
             </section>
             <section class="packages" >
                 <div>
@@ -80,23 +98,59 @@
                     </p>
                     <a class="text-large format-underline">Download package Vignettes</a>
                 </div>
-                <a class="button" >see all packages</a>
+                <div class="button-border">
+                    <a class="button brand-border-button  format-bold" href="/packages/release/BiocViews.html#___Software" >See all packages 
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="14"
+                            height="15"
+                            viewBox="0 0 14 15"
+                            fill="none"
+                        >
+                            <path
+                            d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                            stroke="#3792AD"
+                            stroke-width="2.2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            />
+                        </svg>
+                    </a>
+                </div>
             </section>
             <section class="news">
                 <h2>News</h2>
-                <p class="news-item text-large">Bioconductor <a>Bioc 3.17</a> Released</p>
-                <p class="news-item text-large">Bioconductor <a>Community Blog</a></p>
+                <p class="news-item text-large">Bioconductor <a class="text-large format-underline">Bioc 3.17</a> Released</p>
+                <p class="news-item text-large">Bioconductor <a class="text-large format-underline">Community Blog</a></p>
                 <p class="news-item text-large">
-                Bioconductor <a>browsable code base</a> now available
+                Bioconductor <a class="text-large format-underline">browsable code  </a>now available
                 </p>
                 <p class="news-item text-large">
-                See our <a>google calendar</a> for events, conferences, meetings,
+                See our <a class="text-large format-underline">google calendar </a>for events, conferences, meetings,
                 forums, etc
                 </p>
                 <p class="news-item text-large">
-                Bioconductor<a>F1000 Research Channel</a> is available.
+                Bioconductor <a class="text-large format-underline">F1000 Research Channel </a>is available.
                 </p>
-                <a class="button" >see all news</a>
+                <div class="button-border">
+                    <a class="button brand-border-button  format-bold" href="/news/">See all news
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="14"
+                            height="15"
+                            viewBox="0 0 14 15"
+                            fill="none"
+                        >
+                            <path
+                            d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                            stroke="#3792AD"
+                            stroke-width="2.2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            />
+                        </svg>
+                    </a>
+                </div>
             </section>
         </div>
         <div class="warmcool-box join-content">
