--- a/content/index.html
+++ b/content/index.html
@@ -56,8 +56,8 @@
         <a>Bioconductor Community Blog</a>
       </nav>
     </div>
-    <div class="information-container">
-      <section class="about-bioconductor">
+    <section class="information-container">
+      <div class="about-bioconductor">
         <div>
           <img src="images/icons/svgs/DNA.svg" alt="DNA" />
           <h2 class="format-bold">About Bioconductor</h2>
@@ -89,8 +89,8 @@
             </svg>
           </a>
         </div>
-      </section>
-      <section class="packages">
+      </div>
+      <div class="packages">
         <div>
           <img src="images/icons/svgs/Packages.svg" alt="Package-polygons" />
           <h2>Packages</h2>
@@ -120,8 +120,8 @@
             </svg>
           </a>
         </div>
-      </section>
-      <section class="news">
+      </div>
+      <div class="news">
         <h2>News</h2>
         <p class="news-item text-large">
           Bioconductor
@@ -162,8 +162,8 @@
             </svg>
           </a>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <div class="warmcool-box join-content">
       <section>
         <h2>Join 1 Million + people using Bioconductor</h2>
