--- a/content/examples/index.html
+++ b/content/examples/index.html
@@ -26,7 +26,7 @@
 </p>
 
 <blockquote>
-  <h2>This is a header that can be used in a ‘feature content’ block</h2>
+  <h4>This is a header that can be used in a ‘feature content’ block</h4>
   <p>This is an example of a full width ‘feature content’ block.</p>
   <p>Update this component with the content you need.</p>
 </blockquote>
@@ -110,17 +110,19 @@ BiocManager::install(version = "3.17")
   consequat justo eros.
 </p>
 
-<blockquote class="half-width">
-  <h2>This is a header that can be used in a ‘feature content’ block</h2>
-  <p>This is an example of a half width ‘feature content’ block.</p>
-  <p>Update this component with the content you need.</p>
-</blockquote>
+<div class="two-col">
+  <blockquote class="half-width">
+    <h4>This is a header that can be used in a ‘feature content’ block</h4>
+    <p>This is an example of a half width ‘feature content’ block.</p>
+    <p>Update this component with the content you need.</p>
+  </blockquote>
 
-<img
-  src="/images/examples/medical.png"
-  alt="Person looking through microscope"
-  class="half-width"
-/>
+  <img
+    src="/images/examples/medical.png"
+    alt="Person looking through microscope"
+    class="half-width"
+  />
+</div>
 
 <h2>An example of a gallery (illustrations are placeholders)</h2>
 
