--- a/content/index.html
+++ b/content/index.html
@@ -31,8 +31,8 @@
     </div>
 
     <div>
-        <div class="learn-gradient">
-            <div class="learn-block">
+        <div class="gradient-border learn">
+            <div class="section-block learn-block">
                 <h4>Learn</h4>
                 <div class="learn-content">
                     <div class="info">
@@ -142,19 +142,38 @@
             <button>see all news</button>
         </section>
         </div>
-        <div class="warmcool-box join-content">
-        <section>
-            <h2>Join 1 Million + people using Bioconductor</h2>
-            <p>
-            Join our ever-growing community and discover how Bioconductor can
-            <mark class="text-gradient">Improve your pipeline</mark>
-            </p>
-            <span>
-            <button>Get started</button>
-            <a>learn more</a>
-            </span>
-        </section>
+
+        <div class="gradient-border join">
+            <div class="section-block  join-block">
+                <h2>Join 1 Million + people using Bioconductor</h2>
+                <p class="text-large">
+                Join our ever-growing community and discover how Bioconductor can <mark class="text-gradient format-bold">improve your pipeline</mark></p>
+                <div class="join-buttons">
+                    <a class="brand-border-button" href="/install/">
+                        <span class="span-brand format-bold">
+                        Get Started
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="14"
+                            height="15"
+                            viewBox="0 0 14 15"
+                            fill="none"
+                        >
+                            <path
+                            d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                            stroke="#3792AD"
+                            stroke-width="2.2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            />
+                        </svg>
+                        </span>
+                    </a>
+                    <a class="learn-more format-bold">learn more</a>
+                </div>
+            </div>
         </div>
+
         <section class="events">
         <span>
             <h3>Events</h3>
