--- a/content/index.html
+++ b/content/index.html
@@ -144,32 +144,79 @@
         </div>
 
         <div class="gradient-border join">
-            <div class="section-block  join-block">
-                <h2>Join 1 Million + people using Bioconductor</h2>
-                <p class="text-large">
-                Join our ever-growing community and discover how Bioconductor can <mark class="text-gradient format-bold">improve your pipeline</mark></p>
-                <div class="join-buttons">
-                    <a class="brand-border-button" href="/install/">
-                        <span class="span-brand format-bold">
-                        Get Started
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="14"
-                            height="15"
-                            viewBox="0 0 14 15"
-                            fill="none"
-                        >
-                            <path
-                            d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                            stroke="#3792AD"
-                            stroke-width="2.2"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            />
-                        </svg>
-                        </span>
-                    </a>
-                    <a class="learn-more format-bold">learn more</a>
+            <div id="join-slide-1" class="section-block  join-block">
+                <div class="join-content">
+                    <h2>Join 1 Million + people using Bioconductor</h2>
+                    <p class="text-large">
+                    Join our ever-growing community and discover how Bioconductor can <mark class="text-gradient format-bold">improve your pipeline</mark></p>
+                    <div class="join-buttons">
+                        <a class="brand-border-button" href="/install/">
+                            <span class="span-brand format-bold">
+                            Get Started
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="14"
+                                height="15"
+                                viewBox="0 0 14 15"
+                                fill="none"
+                            >
+                                <path
+                                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                                stroke="#3792AD"
+                                stroke-width="2.2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                />
+                            </svg>
+                            </span>
+                        </a>
+                        <a class="learn-more format-bold" href="/help/">learn more</a>
+                    </div>
+                </div>
+                <div class="join-img-div">
+                    <img
+                        src="/images/icons/Join-Data-Scientists.png"
+                        class="join-img"
+                        alt="" 
+                    />
+                </div>
+            </div>
+
+            <div id="join-slide-2" class="section-block  join-block">
+                <div class="join-content">
+                    <h2>Join 1500 + Bioconductors Developers</h2>
+                    <p class="text-large">
+                    Bioconductor is open source! Join our community of developers and <mark class="text-gradient format-bold">develop your package</mark></p>
+                    <div class="join-buttons">
+                        <a class="brand-border-button" href="/developers/">
+                            <span class="span-brand format-bold">
+                            Join the community
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="14"
+                                height="15"
+                                viewBox="0 0 14 15"
+                                fill="none"
+                            >
+                                <path
+                                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                                stroke="#3792AD"
+                                stroke-width="2.2"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                />
+                            </svg>
+                            </span>
+                        </a>
+                        <a class="learn-more format-bold" href="/help/">learn more</a>
+                    </div>
+                </div>
+                <div class="join-img-div">
+                    <img
+                        src="/images/icons/Join-Developers.png"
+                        class="join-img"
+                        alt="" 
+                    />
                 </div>
             </div>
         </div>
