--- a/content/index.html
+++ b/content/index.html
@@ -71,22 +71,24 @@
             <a class="text-large">Docker images.</a>
           </p>
         </div>
-        <div class="button-border">
-          <a class="button brand-border-button format-bold" href="/about/"
-            >More About Bioconductor
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="14"
-              height="15"
-              viewBox="0 0 14 15"
-              fill="none">
-              <path
-                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                stroke="#3792AD"
-                stroke-width="2.2"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+        <div class="info-section-button-padding">
+          <a class="brand-border-button" href="/about/">
+            <span class="span-brand format-bold">
+              More about Bioconductor
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="15"
+                viewBox="0 0 14 15"
+                fill="none">
+                <path
+                  d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                  stroke="#3792AD"
+                  stroke-width="2.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </span>
           </a>
         </div>
       </div>
@@ -100,24 +102,26 @@
           </p>
           <a class="text-large format-underline">Download package Vignettes</a>
         </div>
-        <div class="button-border">
+        <div class="info-section-button-padding">
           <a
-            class="button brand-border-button format-bold"
-            href="/packages/release/BiocViews.html#___Software"
-            >See all packages
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="14"
-              height="15"
-              viewBox="0 0 14 15"
-              fill="none">
-              <path
-                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                stroke="#3792AD"
-                stroke-width="2.2"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+            class="brand-border-button"
+            href="/packages/release/BiocViews.html#___Software">
+            <span class="span-brand format-bold">
+              See all packages
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="15"
+                viewBox="0 0 14 15"
+                fill="none">
+                <path
+                  d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                  stroke="#3792AD"
+                  stroke-width="2.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </span>
           </a>
         </div>
       </div>
@@ -144,22 +148,24 @@
           <a class="text-large format-underline">F1000 Research Channel </a>is
           available.
         </p>
-        <div class="button-border">
-          <a class="button brand-border-button format-bold" href="/news/"
-            >See all news
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="14"
-              height="15"
-              viewBox="0 0 14 15"
-              fill="none">
-              <path
-                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                stroke="#3792AD"
-                stroke-width="2.2"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
+        <div class="info-section-button-padding">
+          <a class="brand-border-button" href="/news/">
+            <span class="span-brand format-bold">
+              See all News
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="15"
+                viewBox="0 0 14 15"
+                fill="none">
+                <path
+                  d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                  stroke="#3792AD"
+                  stroke-width="2.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </span>
           </a>
         </div>
       </div>
