--- a/content/index.html
+++ b/content/index.html
@@ -1,35 +1,48 @@
 <div class="homepage-block">
-  <span class="buttons">
-    <button>For Data scientists</button>
-    <button>For developers</button>
-  </span>
+  <div class="data-scientist-and-developer-info">
+    <input
+      type="radio"
+      class="tab-radio"
+      name="homepage-tab"
+      id="data-scientist-tab"
+      checked />
+    <label for="data-scientist-tab" class="tab-label">
+      For Data scientists
+    </label>
+    <section class="tab-content">
+      <img alt="start using bioconductor now!" />
+      <div class="brand-box data-scientist-content">
+        <h2>Create bioinformatic solutions with Bioconductor</h2>
+        <div class="box data-scientist-border">
+          <div class="box box-green">
+            <p>software, Annotation and experiment packages</p>
+            <p>Docker containers for Bioconductor</p>
+          </div>
 
-  <div class="data-scientist-container">
-    <img alt="start using bioconductor now!" />
-    <section class="brand-box data-scientist-content">
-      <h2>Create bioinformatic solutions with Bioconductor</h2>
-      <div class="box data-scientist-border">
-        <div class="box box-green">
-          <p>software, Annotation and experiment packages</p>
-          <p>Docker containers for Bioconductor</p>
+          <p>
+            Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
+            <a>SingleRBook</a>
+          </p>
+          <a>Latest release announcement</a>
+          <p>
+            <a>Use Bioconductor in theAnVIL</a>. See our
+            <a>project updates</a>
+          </p>
+          <a>Community Slack sigh-up</a>
+          <a>Support site</a>
+          <a>Events calendar</a>
         </div>
-
-        <p>
-          Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
-          <a>SingleRBook</a>
-        </p>
-        <a>Latest release announcement</a>
-        <p>
-          <a>Use Bioconductor in theAnVIL</a>. See our <a>project updates</a>
-        </p>
-        <a>Community Slack sigh-up</a>
-        <a>Support site</a>
-        <a>Events calendar</a>
       </div>
+      <img alt="learn more about bioconductor" />
     </section>
-    <img alt="learn more about bioconductor" />
+    <input
+      type="radio"
+      class="tab-radio"
+      name="homepage-tab"
+      id="developer-tab" />
+    <label for="developer-tab" class="tab-label"> For Developers </label>
+    <section class="tab-content">stuff for developers</section>
   </div>
-
   <div>
     <div class="learn-gradient">
       <div class="learn-block">
