--- a/content/index.html
+++ b/content/index.html
@@ -143,8 +143,10 @@
         </section>
         </div>
 
-        <div class="gradient-border join">
-            <div id="join-slide-1" class="section-block  join-block">
+    <div class="gradient-border join">
+        <div class="gradient-border-inner section-block">
+            <input type="radio" class="tabs-join-radio" name="tabs-join" id="join-tab1" checked>
+            <div class="join-row">
                 <div class="join-content">
                     <h2>Join 1 Million + people using Bioconductor</h2>
                     <p class="text-large">
@@ -152,22 +154,22 @@
                     <div class="join-buttons">
                         <a class="brand-border-button" href="/install/">
                             <span class="span-brand format-bold">
-                            Get Started
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="14"
-                                height="15"
-                                viewBox="0 0 14 15"
-                                fill="none"
-                            >
-                                <path
-                                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                                stroke="#3792AD"
-                                stroke-width="2.2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                />
-                            </svg>
+                                Get Started
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="14"
+                                    height="15"
+                                    viewBox="0 0 14 15"
+                                    fill="none"
+                                >
+                                    <path
+                                    d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                                    stroke="#3792AD"
+                                    stroke-width="2.2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    />
+                                </svg>
                             </span>
                         </a>
                         <a class="learn-more format-bold" href="/help/">learn more</a>
@@ -177,12 +179,13 @@
                     <img
                         src="/images/icons/Join-Data-Scientists.png"
                         class="join-img"
-                        alt="" 
+                        alt=""
                     />
                 </div>
             </div>
 
-            <div id="join-slide-2" class="section-block  join-block">
+            <input type="radio" class="tabs-join-radio" name="tabs-join" id="join-tab2" >
+            <div class="join-row">
                 <div class="join-content">
                     <h2>Join 1500 + Bioconductors Developers</h2>
                     <p class="text-large">
@@ -190,22 +193,22 @@
                     <div class="join-buttons">
                         <a class="brand-border-button" href="/developers/">
                             <span class="span-brand format-bold">
-                            Join the community
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="14"
-                                height="15"
-                                viewBox="0 0 14 15"
-                                fill="none"
-                            >
-                                <path
-                                d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
-                                stroke="#3792AD"
-                                stroke-width="2.2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                />
-                            </svg>
+                                Join the community
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="14"
+                                    height="15"
+                                    viewBox="0 0 14 15"
+                                    fill="none"
+                                >
+                                    <path
+                                    d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+                                    stroke="#3792AD"
+                                    stroke-width="2.2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    />
+                                </svg>
                             </span>
                         </a>
                         <a class="learn-more format-bold" href="/help/">learn more</a>
@@ -215,11 +218,12 @@
                     <img
                         src="/images/icons/Join-Developers.png"
                         class="join-img"
-                        alt="" 
+                        alt=""
                     />
                 </div>
             </div>
         </div>
+    </div>
 
         <section class="events">
         <span>
