--- a/content/index.html
+++ b/content/index.html
@@ -2,45 +2,49 @@
   <div class="data-scientist-and-developer-info">
     <input
       type="radio"
-      class="tab-radio"
+      class="tab-radio data-scientist-radio"
       name="homepage-tab"
       id="data-scientist-tab"
       checked />
-    <label for="data-scientist-tab" class="tab-label">
+    <label for="data-scientist-tab" class="tab-label data-scientist-radio">
       For Data scientists
     </label>
     <section class="tab-content">
       <img alt="start using bioconductor now!" />
-      <div class="brand-box data-scientist-content">
+      <div class="data-scientists-content">
         <h2>Create bioinformatic solutions with Bioconductor</h2>
-        <div class="box data-scientist-border">
-          <div class="box box-green">
-            <p>software, Annotation and experiment packages</p>
-            <p>Docker containers for Bioconductor</p>
-          </div>
+        <div class="brand-gradient-border">
+          <div class="data-scientist-block">
+            <div class="box box-green">
+              <p>software, Annotation and experiment packages</p>
+              <p>Docker containers for Bioconductor</p>
+            </div>
 
-          <p>
-            Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
-            <a>SingleRBook</a>
-          </p>
-          <a>Latest release announcement</a>
-          <p>
-            <a>Use Bioconductor in theAnVIL</a>. See our
-            <a>project updates</a>
-          </p>
-          <a>Community Slack sigh-up</a>
-          <a>Support site</a>
-          <a>Events calendar</a>
+            <p>
+              Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
+              <a>SingleRBook</a>
+            </p>
+            <a>Latest release announcement</a>
+            <p>
+              <a>Use Bioconductor in theAnVIL</a>. See our
+              <a>project updates</a>
+            </p>
+            <a>Community Slack sigh-up</a>
+            <a>Support site</a>
+            <a>Events calendar</a>
+          </div>
         </div>
       </div>
       <img alt="learn more about bioconductor" />
     </section>
     <input
       type="radio"
-      class="tab-radio"
+      class="tab-radio developer-radio"
       name="homepage-tab"
       id="developer-tab" />
-    <label for="developer-tab" class="tab-label"> For Developers </label>
+    <label for="developer-tab" class="tab-label developer-radio">
+      For Developers
+    </label>
     <section class="tab-content">stuff for developers</section>
   </div>
   <div>
