--- a/content/index.html
+++ b/content/index.html
@@ -10,32 +10,57 @@
       For Data scientists
     </label>
     <section class="tab-content">
-      <img alt="start using bioconductor now!" />
+      <img
+        src="images/Doodles/Doodle-1.png"
+        alt="start using bioconductor now!" />
       <div class="data-scientists-content">
         <h2>Create bioinformatic solutions with Bioconductor</h2>
         <div class="brand-gradient-border">
           <div class="data-scientist-block">
-            <div class="box box-green">
-              <p>software, Annotation and experiment packages</p>
-              <p>Docker containers for Bioconductor</p>
+            <div class="green-box">
+              <a>
+                <img src="images/icons/svgs/arrow-circle-right.svg" />
+                Software, Annotation and experiment packages
+              </a>
+              <a>
+                <img src="images/icons/svgs/arrow-circle-right.svg" /> Docker
+                containers for Bioconductor
+              </a>
             </div>
-
-            <p>
-              Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
-              <a>SingleRBook</a>
-            </p>
-            <a>Latest release announcement</a>
-            <p>
-              <a>Use Bioconductor in theAnVIL</a>. See our
-              <a>project updates</a>
-            </p>
-            <a>Community Slack sigh-up</a>
-            <a>Support site</a>
-            <a>Events calendar</a>
+            <div class="data-scientist-box">
+              <p>
+                📖 Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
+                <a>SingleRBook</a>
+              </p>
+              <p>📣 <a> Latest release announcement</a></p>
+              <p>
+                🛠️ <a>Use Bioconductor in the AnVIL</a>. See our
+                <a>project updates</a>
+              </p>
+              <p>💬 <a> Community Slack sigh-up</a></p>
+              <p>💡 <a>Support site</a></p>
+              <p>🗓️ <a>Events calendar</a></p>
+            </div>
+            <div class="warmcool-gradient-border">
+              <div class="user-quote">
+                <img alt="profile" />
+                <div>
+                  <p class="text-h6">
+                    “Bioconductor allows me to quickly and easily experiment
+                    with packages to help improve my RNA-Seq analysis pipeline”
+                  </p>
+                  <p class="text-small">
+                    Annalise - Data Analyst, Organisation
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <img alt="learn more about bioconductor" />
+      <img
+        src="images/Doodles/Doodle-2.png"
+        alt="learn more about bioconductor" />
     </section>
     <input
       type="radio"
