updated emojis and quotes

--- a/content/index.html
+++ b/content/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="warmcool-gradient-border">
               <div class="user-quote">
-                <img alt="profile" />
+                <img src="images/profiles/profile.svg" />
                 <div>
-                  <p class="text-h6">
+                  <p class="text-h6 format-bold">
                     “Bioconductor allows me to quickly and easily experiment
                     with packages to help improve my RNA-Seq analysis pipeline”
                   </p>
