--- a/content/index.html
+++ b/content/index.html
@@ -27,7 +27,7 @@
                 containers for Bioconductor
               </a>
             </div>
-            <div class="data-scientist-box">
+            <div class="data-scientist-rest">
               <p>
                 📖 Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
                 <a>SingleRBook</a>
