--- a/content/index.html
+++ b/content/index.html
@@ -10,57 +10,64 @@
       For Data scientists
     </label>
     <section class="tab-content">
-      <img
-        src="images/Doodles/Doodle-1.png"
-        alt="start using bioconductor now!" />
-      <div class="data-scientists-content">
+      <div class="data-scientist-container">
         <h2>Create bioinformatic solutions with Bioconductor</h2>
-        <div class="brand-gradient-border">
-          <div class="data-scientist-block">
-            <div class="green-box">
-              <a>
-                <img src="images/icons/svgs/arrow-circle-right.svg" />
-                Software, Annotation and experiment packages
-              </a>
-              <a>
-                <img src="images/icons/svgs/arrow-circle-right.svg" /> Docker
-                containers for Bioconductor
-              </a>
-            </div>
-            <div class="data-scientist-rest">
-              <p>
-                📖 Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
-                <a>SingleRBook</a>
-              </p>
-              <p>📣 <a> Latest release announcement</a></p>
-              <p>
-                🛠️ <a>Use Bioconductor in the AnVIL</a>. See our
-                <a>project updates</a>
-              </p>
-              <p>💬 <a> Community Slack sigh-up</a></p>
-              <p>💡 <a>Support site</a></p>
-              <p>🗓️ <a>Events calendar</a></p>
-            </div>
-            <div class="warmcool-gradient-border">
-              <div class="user-quote">
-                <img src="images/profiles/profile.svg" />
-                <div>
-                  <p class="text-h6 format-bold">
-                    “Bioconductor allows me to quickly and easily experiment
-                    with packages to help improve my RNA-Seq analysis pipeline”
-                  </p>
-                  <p class="text-small">
-                    Annalise - Data Analyst, Organisation
-                  </p>
+        <div class="doodle-data-scientist-container">
+          <div class="left-doodle">
+            <img
+              src="images/Doodles/Doodle-1.png"
+              alt="start using bioconductor now!" />
+          </div>
+          <div class="brand-gradient-border">
+            <div class="data-scientist-content">
+              <div class="green-box">
+                <a>
+                  <img src="images/icons/svgs/arrow-circle-right.svg" />
+                  Software, Annotation and experiment packages
+                </a>
+                <a>
+                  <img src="images/icons/svgs/arrow-circle-right.svg" /> Docker
+                  containers for Bioconductor
+                </a>
+              </div>
+              <div class="data-scientist-rest">
+                <p>
+                  📖 Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
+                  <a>SingleRBook</a>
+                </p>
+                <p>📣 <a> Latest release announcement</a></p>
+                <p>
+                  🛠️ <a>Use Bioconductor in the AnVIL</a>. See our
+                  <a>project updates</a>
+                </p>
+                <p>💬 <a> Community Slack sigh-up</a></p>
+                <p>💡 <a>Support site</a></p>
+                <p>🗓️ <a>Events calendar</a></p>
+              </div>
+              <div class="warmcool-gradient-border">
+                <div class="user-quote">
+                  <img src="images/profiles/profile.svg" />
+                  <div>
+                    <p class="text-h6 format-bold">
+                      “Bioconductor allows me to quickly and easily experiment
+                      with packages to help improve my RNA-Seq analysis
+                      pipeline”
+                    </p>
+                    <p class="text-small">
+                      Annalise - Data Analyst, Organisation
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="right-doodle">
+            <img
+              src="images/Doodles/Doodle-2.png"
+              alt="learn more about bioconductor" />
+          </div>
         </div>
       </div>
-      <img
-        src="images/Doodles/Doodle-2.png"
-        alt="learn more about bioconductor" />
     </section>
     <input
       type="radio"
