--- a/content/index.html
+++ b/content/index.html
@@ -67,6 +67,10 @@
               alt="learn more about bioconductor" />
           </div>
         </div>
+        <a class="" href=""
+          >Need some help? Ask our community on the Bioconductor Support
+          site!</a
+        >
       </div>
     </section>
     <input
