images aded to homepage

--- a/content/index.html
+++ b/content/index.html
@@ -67,7 +67,7 @@
               alt="learn more about bioconductor" />
           </div>
         </div>
-        <a class="" href=""
+        <a class="data-scientist-chip text-large format-bold" href=""
           >Need some help? Ask our community on the Bioconductor Support
           site!</a
         >
