--- a/content/index.html
+++ b/content/index.html
@@ -21,28 +21,41 @@
           <div class="brand-gradient-border">
             <div class="data-scientist-content">
               <div class="green-box">
-                <a>
+                <p>
                   <img src="images/icons/svgs/arrow-circle-right.svg" />
-                  Software, Annotation and experiment packages
-                </a>
-                <a>
-                  <img src="images/icons/svgs/arrow-circle-right.svg" /> Docker
-                  containers for Bioconductor
-                </a>
+                  <a class="format-underline">Software</a>,
+                  <a class="format-underline">Annotation</a> and
+                  <a class="format-underline">Experiment</a> packages
+                </p>
+                <p>
+                  <img src="images/icons/svgs/arrow-circle-right.svg" />
+                  <a class="format-underline"
+                    >Docker containers for Bioconductor</a
+                  >
+                </p>
               </div>
               <div class="data-scientist-rest">
                 <p>
-                  📖 Bioconductor Books: <a>csawBook</a>, <a>OSCA</a> and
-                  <a>SingleRBook</a>
+                  📖 Bioconductor Books:
+                  <a class="format-underline">csawBook</a>,
+                  <a class="format-underline">OSCA</a> and
+                  <a class="format-underline">SingleRBook</a>
                 </p>
-                <p>📣 <a> Latest release announcement</a></p>
                 <p>
-                  🛠️ <a>Use Bioconductor in the AnVIL</a>. See our
-                  <a>project updates</a>
+                  📣
+                  <a class="format-underline"> Latest release announcement</a>
                 </p>
-                <p>💬 <a> Community Slack sigh-up</a></p>
-                <p>💡 <a>Support site</a></p>
-                <p>🗓️ <a>Events calendar</a></p>
+                <p>
+                  🛠️
+                  <a class="format-underline">Use Bioconductor in the AnVIL</a>.
+                  See our
+                  <a class="format-underline">project updates</a>
+                </p>
+                <p>
+                  💬 <a class="format-underline"> Community Slack sign-up</a>
+                </p>
+                <p>💡 <a class="format-underline">Support site</a></p>
+                <p>🗓️ <a class="format-underline">Events calendar</a></p>
               </div>
               <div class="warmcool-gradient-border">
                 <div class="user-quote">
