--- a/content/index.html
+++ b/content/index.html
@@ -80,10 +80,27 @@
               alt="learn more about bioconductor" />
           </div>
         </div>
-        <a class="data-scientist-chip text-large format-bold" href=""
-          >Need some help? Ask our community on the Bioconductor Support
-          site!</a
-        >
+        <a class="data-scientist-chip text-large format-bold" href="">
+          <span>
+            <img
+              src="images/icons/svgs/question-mark-circle.svg"
+              alt="question mark circle" />
+            Need some help? Ask our community on the Bioconductor Support site!
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="25"
+              viewBox="0 0 24 25"
+              fill="none">
+              <path
+                d="M9 5.90002L16 12.9L9 19.9"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </span>
+        </a>
       </div>
     </section>
     <input
