--- a/content/index.html
+++ b/content/index.html
@@ -23,13 +23,27 @@
               <div class="green-box">
                 <p>
                   <img src="images/icons/svgs/arrow-circle-right.svg" />
-                  <a class="format-underline">Software</a>,
-                  <a class="format-underline">Annotation</a> and
-                  <a class="format-underline">Experiment</a> packages
+                  <a
+                    class="format-underline"
+                    href="/packages/release/BiocViews.html#___Software"
+                    >Software</a
+                  >,
+                  <a
+                    class="format-underline"
+                    href="/packages/release/BiocViews.html#___AnnotationData"
+                    >Annotation</a
+                  >
+                  and
+                  <a
+                    class="format-underline"
+                    href="/packages/release/BiocViews.html#___ExperimentData"
+                    >Experiment</a
+                  >
+                  packages
                 </p>
                 <p>
                   <img src="images/icons/svgs/arrow-circle-right.svg" />
-                  <a class="format-underline"
+                  <a class="format-underline" href="/help/docker/"
                     >Docker containers for Bioconductor</a
                   >
                 </p>
@@ -37,25 +51,32 @@
               <div class="data-scientist-rest">
                 <p>
                   📖 Bioconductor Books:
-                  <a class="format-underline">csawBook</a>,
-                  <a class="format-underline">OSCA</a> and
-                  <a class="format-underline">SingleRBook</a>
+                  <a class="format-underline" href="/books/release/csawBook"
+                    >csawBook</a
+                  >,
+                  <a class="format-underline" href="/books/release/OSCA"
+                    >OSCA</a
+                  >
+                  and
+                  <a class="format-underline" href="/books/release/SingleRBook"
+                    >SingleRBook</a
+                  >
                 </p>
                 <p>
                   📣
-                  <a class="format-underline"> Latest release announcement</a>
+                  <a class="format-underline" href="/news/bioc_<%= config[:release_version].sub(".", "_") %>_release/"> Latest release announcement</a>
                 </p>
                 <p>
                   🛠️
-                  <a class="format-underline">Use Bioconductor in the AnVIL</a>.
+                  <a class="format-underline" href="https://anvilproject.org" >Use Bioconductor in the AnVIL</a>.
                   See our
-                  <a class="format-underline">project updates</a>
+                  <a class="format-underline" href="https://anvil.bioconductor.org" >project updates</a>
                 </p>
                 <p>
-                  💬 <a class="format-underline"> Community Slack sign-up</a>
+                  💬 <a class="format-underline" href="https://slack.bioconductor.org/" > Community Slack sign-up</a>
                 </p>
-                <p>💡 <a class="format-underline">Support site</a></p>
-                <p>🗓️ <a class="format-underline">Events calendar</a></p>
+                <p>💡 <a class="format-underline" href="/help/support/" >Support site</a></p>
+                <p>🗓️ <a class="format-underline" href="http://bioconductor.org/help/events/" >Events calendar</a></p>
               </div>
               <div class="warmcool-gradient-border">
                 <div class="user-quote">
@@ -80,7 +101,7 @@
               alt="learn more about bioconductor" />
           </div>
         </div>
-        <a class="data-scientist-chip text-large format-bold" href="">
+        <a class="data-scientist-chip text-large format-bold" href="/help/support/">
           <span>
             <img
               src="images/icons/svgs/question-mark-circle.svg"
