data and developer section completed

--- a/content/index.html
+++ b/content/index.html
@@ -101,29 +101,28 @@
               alt="learn more about bioconductor" />
           </div>
         </div>
-        <a class="data-scientist-chip text-large format-bold" href="/help/support/">
-          <span>
-            <img
-              src="images/icons/svgs/question-mark-circle.svg"
-              alt="question mark circle" />
-            Need some help? Ask our community on the Bioconductor Support site!
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="25"
-              viewBox="0 0 24 25"
-              fill="none">
-              <path
-                d="M9 5.90002L16 12.9L9 19.9"
-                stroke="white"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </span>
+        <a class="data-dev-chip text-large format-bold" href="/help/support/">
+          <img
+            src="images/icons/svgs/question-mark-circle.svg"
+            alt="question mark circle" />
+          Need some help? Ask our community on the Bioconductor Support site!
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="25"
+            viewBox="0 0 24 25"
+            fill="none">
+            <path
+              d="M9 5.90002L16 12.9L9 19.9"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
         </a>
       </div>
     </section>
+
     <input
       type="radio"
       class="tab-radio developer-radio"
@@ -132,8 +131,118 @@
     <label for="developer-tab" class="tab-label developer-radio">
       For Developers
     </label>
-    <section class="tab-content">stuff for developers</section>
+    <section class="tab-content">
+      <div class="developer-container">
+        <h2>Contribute to Bioconductor</h2>
+        <div class="doodle-developer-container">
+          <img src="images/Doodles/code-left.png" alt="left-side code block" />
+          <div class="warmcool-gradient-border">
+            <div class="developer-content">
+              <div class="dev-navs">
+                <nav class="dev-nav">
+                  <p class="text-large">
+                    # <a href="/developers/">Developers resources</a>
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a
+                      href="https://contributions.bioconductor.org/use-devel.html"
+                      >Use Bioc 'devel'</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a href="/packages/devel/BiocViews.html#___Software"
+                      >'Devel' packages</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a href="https://contributions.bioconductor.org/"
+                      >Package guidelines</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a
+                      href="https://contributions.bioconductor.org/submission-overview.html"
+                      >New package submission</a
+                    >
+                  </p>
+                </nav>
+                <nav class="dev-nav">
+                  <p class="text-large">
+                    #
+                    <a
+                      href="https://contributions.bioconductor.org/git-version-control.html"
+                      >Git source control</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a href="https://git.bioconductor.org/BiocCredentials/"
+                      >Git Credentials App</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    # <a href="/checkResults/">Build reports</a>
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a
+                      href="https://contributions.bioconductor.org/troubleshooting-build-report.html"
+                      >Troubleshooting Build Reports</a
+                    >
+                  </p>
+                  <p class="text-large">
+                    #
+                    <a href="https://code.bioconductor.org/"
+                      >Browsable code base</a
+                    >
+                  </p>
+                </nav>
+              </div>
+              <div class="warmcool-gradient-border dev-comment">
+                <div class="dev-quote">
+                  <img src="images/profiles/charlie.svg" />
+                  <div class="avatar-content">
+                    <p class="text-large format-bold">
+                      "The bioconductor community and resources make a package
+                      developments straightforward and rewarding!"
+                    </p>
+                    <p class="format-bold">Charlie - Package Developer</p>
+                  </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <img src="images/Doodles/code-right.png" alt="right-side code block" />
+        </div>
+        <a class="data-dev-chip dev-slack" href="https://slack.bioconductor.org/">
+          <div class="dev-logo">
+            <img src="images/icons/slack.png" alt="slack logo" />
+            Join Bioconductor on Slack, and meet hundreds of other developers!
+          </div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="25"
+            viewBox="0 0 24 25"
+            fill="none"
+          >
+            <path
+              d="M9 5.90002L16 12.9L9 19.9"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </a>
+      </div>
+    </section>
   </div>
+
   <div>
     <div class="learn-gradient">
       <div class="learn-block">
