linting error fixed

--- a/content/index.html
+++ b/content/index.html
@@ -22,7 +22,7 @@
             <div class="data-scientist-content">
               <div class="green-box">
                 <p>
-                  <img src="images/icons/svgs/arrow-circle-right.svg" />
+                  <img src="images/icons/svgs/arrow-circle-right.svg" alt=""/>
                   <a
                     class="format-underline"
                     href="/packages/release/BiocViews.html#___Software"
@@ -42,7 +42,7 @@
                   packages
                 </p>
                 <p>
-                  <img src="images/icons/svgs/arrow-circle-right.svg" />
+                  <img src="images/icons/svgs/arrow-circle-right.svg" alt="" />
                   <a class="format-underline" href="/help/docker/"
                     >Docker containers for Bioconductor</a
                   >
@@ -64,6 +64,7 @@
                 </p>
                 <p>
                   📣
+                  <!-- htmlhint ignore: tag-pair -->
                   <a class="format-underline" href="/news/bioc_<%= config[:release_version].sub(".", "_") %>_release/"> Latest release announcement</a>
                 </p>
                 <p>
@@ -80,7 +81,7 @@
               </div>
               <div class="warmcool-gradient-border">
                 <div class="user-quote">
-                  <img src="images/profiles/profile.svg" />
+                  <img src="images/profiles/profile.svg" alt="profile picture" />
                   <div>
                     <p class="text-h6 format-bold">
                       “Bioconductor allows me to quickly and easily experiment
@@ -204,7 +205,7 @@
               </div>
               <div class="warmcool-gradient-border dev-comment">
                 <div class="dev-quote">
-                  <img src="images/profiles/charlie.svg" />
+                  <img src="images/profiles/charlie.svg" alt="profile picture"/>
                   <div class="avatar-content">
                     <p class="text-large format-bold">
                       "The bioconductor community and resources make a package
