--- a/content/index.html
+++ b/content/index.html
@@ -64,8 +64,9 @@
                 </p>
                 <p>
                   📣
-                  <!-- htmlhint ignore: tag-pair -->
+                  <!-- htmlhint ignore:start -->
                   <a class="format-underline" href="/news/bioc_<%= config[:release_version].sub(".", "_") %>_release/"> Latest release announcement</a>
+                  <!-- htmlhint ignore:end -->
                 </p>
                 <p>
                   🛠️
