--- a/content/index_old.html
+++ b/content/index_old.html
@@ -1,4 +1,4 @@
-<div class="shaded_box">
+<div class="sidebar-box">
 
   <table cellspacing="0" cellpadding="0" summary="" style="padding-bottom: 0;"><!-- table used for precise positioning -->
     <tr valign="top">
